2007-11-06  Alexander Larsson  <alexl@redhat.com>

        * POTFILES.in:
	Added all source files
	
