@@ -1,3 +1,8 @@
+2007-11-15  Alexander Larsson  <alexl@redhat.com>
+
+	* POTFILES.in:
+	Remove wrongly added files from failed distcheck
+
 2007-11-06  Alexander Larsson  <alexl@redhat.com>
 
         * POTFILES.in:
